--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME="cbr-test"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:yEcDV2YNkFDsVpChjlOTYPG4R3c3xU4LXmLw68r8Jpk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:88
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -16,13 +16,11 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-
-MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=redis
 REDIS_PASSWORD=null
@@ -57,4 +55,4 @@ COMPOSE_PROJECT_NAME=cbr
 DOCKER_UID=1000
 DOCKER_GID=1000
 
-XDEBUG_MODE=develop,debug
+XDEBUG_MODE=on
