--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="cbr-test"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost:87
+APP_URL=http://localhost:88
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,18 +11,16 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=pg
 DB_PORT=5432
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=cbr
+DB_USERNAME=postgres
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+QUEUE_CONNECTION=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
-
-MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=redis
 REDIS_PASSWORD=null
@@ -57,4 +55,6 @@ COMPOSE_PROJECT_NAME=cbr
 DOCKER_UID=1000
 DOCKER_GID=1000
 
-XDEBUG_MODE=develop,debug
+XDEBUG_MODE=off
+
+RATE_CLIENT_CLASS=App\Services\RateService\Clients\CbrClient
