--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -5,7 +5,7 @@ services:
     container_name: ${COMPOSE_PROJECT_NAME}_nginx
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "88:80"
     volumes:
       - './:/var/www'
       - './docker/nginx/nginx.conf:/etc/nginx/nginx.conf'
@@ -17,6 +17,7 @@ services:
       - app-network
 
   app:
+    &base-app
     build:
       context: './docker/app'
       args:
@@ -39,6 +40,13 @@ services:
     networks:
       - app-network
 
+  worker:
+    <<: *base-app
+    ports:
+      - "8081:8080"
+    container_name: ${COMPOSE_PROJECT_NAME}_worker
+    command: php artisan queue:work
+
   redis:
     image: redis
     container_name: ${COMPOSE_PROJECT_NAME}_redis
@@ -50,12 +58,32 @@ services:
     networks:
       - app-network
 
+  pg:
+    image: postgres:13.2
+    container_name: ${COMPOSE_PROJECT_NAME}_pg
+    restart: unless-stopped
+    ports:
+      - '5434:5432'
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: ap
+      POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRESQL_MAX_OPEN_CONNS: 2000
+    volumes:
+      - 'pg_data:/var/lib/postgresql/data'
+      - 'pg_data:/temp'
+    networks:
+      - app-network
 
 networks:
   app-network:
     driver: bridge
 
 volumes:
+  pg_data:
+    name: ${COMPOSE_PROJECT_NAME}_pg_data
+    driver: local
   redis_data:
     name: ${COMPOSE_PROJECT_NAME}_redis_data
     driver: local
