--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -67,7 +67,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: ap
+      POSTGRES_DB: cbr
       POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRESQL_MAX_OPEN_CONNS: 2000
     volumes:
